<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_gravity="center"
            android:layout_height="24dp"
            app:srcCompat="@drawable/baseline_location_on_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourLocation"
            android:layout_gravity="center"
            android:textColor="#204553"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/header_background"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/needHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#204553"
                android:layout_marginLeft="10dp"
                android:text="@string/help"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/youtubeRedirect"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/youtube"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/discoverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/Header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#204553"
            android:textStyle="bold"
            android:text="@string/discover"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#204553"
            android:text="@string/awesomeWorld"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_below="@id/discoverText">
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search"
            android:background="@drawable/header_background"
            android:backgroundTint="#DEEAF5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popularPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/searchBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#204553"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textSize="18sp"
                android:textColor="#204553"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".Horizontal_ScrollView">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="145dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/stateofUnityFrame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                                <ImageButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/statueofunity"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="60dp"
                                    android:gravity="center"
                                    android:layout_gravity="center"
                                    android:clickable="false"
                                    android:text="@string/statueofunity"
                                    android:textSize="25dp"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </FrameLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="145dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/tajMahalFrame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                                <ImageButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/tajmahal"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="60dp"
                                    android:clickable="false"
                                    android:text="@string/tajmahal"
                                    android:textSize="25dp"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </FrameLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="145dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/indiaGateFrame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">
                                <ImageButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/indiagate"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="60dp"
                                    android:clickable="false"
                                    android:text="@string/indiagate"
                                    android:textSize="25dp"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </FrameLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/popularPlaces">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/whatyousaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatyousaw"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#204553"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ADADAD"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:text="@string/show"

                android:textSize="18dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/showAll"
        tools:context=".Horizontal_ScrollView">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/indiagate"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/indiagate"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/indiagate"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/indiagate"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/indiagate"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/visited">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            app:fabCradleMargin="10dp"
            android:layout_below="@id/visited"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottomNavigation"
                android:layout_marginRight="10dp"
                app:menu="@menu/bottom_navigation"
                android:background="@drawable/transparent_background"/>

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>